sandbox/output
Anagram.java:9: error: missing return statement
    }
    ^
1 error
